@@ -2,13 +2,12 @@ package nl.fontys.lms.business.enrollment.impl;
 
 import lombok.AllArgsConstructor;
 import nl.fontys.lms.business.enrollment.GetEnrollmentsForStudentUseCase;
-import nl.fontys.lms.domain.Enrollment.Enrollment;
-import nl.fontys.lms.domain.Enrollment.GetEnrollmentsForStudentResponse;
+import nl.fontys.lms.domain.enrollment.Enrollment;
+import nl.fontys.lms.domain.enrollment.GetEnrollmentsForStudentResponse;
 import nl.fontys.lms.persistence.EnrollmentRepository;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -21,7 +20,7 @@ public class GetEnrollmentsForStudentUseCaseImpl implements GetEnrollmentsForStu
                 .findAllEnrollmentsForStudent(studentId)
                 .stream()
                 .map(EnrollmentConverter::convert)
-                .collect(Collectors.toList());
+                .toList();
 
         return GetEnrollmentsForStudentResponse.builder()
                 .studentId(studentId)
